fix: allow all CORS origins for WebSocket endpoints (APP Origin:null)
APP (okhttp) sends 'Origin: null' which is rejected by Spring Security
CORS filter when CORS_ALLOWED_ORIGINS is set to specific domains.
WebSocket endpoints now use allowedOriginPatterns('*') in CorsConfig,
separate from the restricted API CORS policy.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>